--- a/style.css
+++ b/style.css
@@ -70,3 +70,4 @@ img{
     left: 410px; 
     bottom: 50px;
 }
+/*not done with this yet! doesnt seem to be funny resized for mobile but progress has been made*/
