--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ p{
   width: 265px;
   height: 20px;
   border-radius: 5px;
-  margin-top: 170px;
-  margin-right: 990px;
+  margin-top: 100px;
+  margin-right: 970px;
 }
 
 img{
@@ -54,7 +54,7 @@ img{
   color: black;
   font-size: 40px;
   position: relative;
-  bottom: 900px;
+  bottom: 850px;
   left: 1825px;
 }
 
@@ -65,9 +65,9 @@ img{
   }
 }
 
-@media (orientation: portrait) {}
+@media (orientation: portrait) {
   .fa-github {
     left: 410px; 
     bottom: 50px;
+  }
 }
-/*not done with this yet! doesnt seem to be funny resized for mobile but progress has been made*/
