--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ img{
   border-radius: 10px;
   position: relative;
   top: 25px;
-  left: 2px;
+  left: 1px;
 }
 
 .fa-github{
@@ -60,26 +60,34 @@ img{
 
 @media (orientation: portrait) {
   .fa-bars {
-    left: 415px;
-    bottom: 880px;
+    left: 425px;
+    bottom: 855px;
   }
 }
 
 @media (orientation: portrait) {
   .fa-github {
-    left: 375px; 
-    bottom: 48px;
+    left: 300px; 
+    bottom: 50px;
   }
 }
 
 @media (orientation: portrait) {
   h1{
-    font-size:x-large
+    font-size: 23px;
   }
 }
 
 @media (orientation: portrait) {
   .burger{
-    font-size:larger
+    font-size:19px
   }
+}
+
+@media (orientation: portrait) {
+  img {
+    max-height: 700px;
+    max-width: 450px;
+  }
+  
 }
