--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ img{
 
   h1 {
     font-size: 23px;
-    top: 10px;
+    top: 13px;
   }
 
   div {
@@ -81,6 +81,7 @@ img{
   img {
     max-height: 450px;
     max-width: 365px;
+    left: 0.5px;
   }
 }
 
